test/src/e2e_vm_tests/test_programs/should_fail/trait_impl_purity_mismatch/src/main.sw
contract;

trait A {
    #[storage(read)]
    fn f(self) -> bool;
}

impl A for bool {
    fn f(self) -> bool {
        self
    }
}
